# 101-rs

./: Cargo.toml
exercises/A2/1-error-propagating/src/: main.rs
exercises/A2/3-error-handling/src/: main.rs
exercises/A2/4-boxed-data/src/: main.rs
exercises/A2/5-bonus-ring-buffer/src/: main.rs
exercises/A3/2-local-storage-vec/src/: lib.rs
exercises/B/1-my-serde-app/src/: main.rs
exercises/B/2-quizzer/: Cargo.toml
exercises/B/2-quizzer/src/: lib.rs
exercises/B/3-fizzbuzz/src/: lib.rs
exercises/C/1-tf-idf/src/: main.rs
exercises/C/2-mutex/src/: main.rs
exercises/D/1-bsn/src/: lib.rs
exercises/D/2-3d-printer/src/: lib.rs
exercises/D/3-config-reader/src/: main.rs
exercises/E/1-channels/src/: broadcast.rs  mpsc.rs  oneshot.rs
exercises/F/2-execve/src/: main.rs
exercises/F/3-tagged-union/src/: main.rs
exercises/G/1-crc-in-c/: build.rs
exercises/G/1-crc-in-c/src/: main.rs
exercises/G/2-crc-in-rust/src/: lib.rs
exercises/G/3-tweetnacl-bindgen/: Cargo.toml
exercises/G/3-tweetnacl-bindgen/src/: bindings.rs  main.rs
exercises/G/4-pyo3/src/: lib.rs
